--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Portfolio Website">
+    <meta name="description" content="Software Developer">
     <meta name="author" content="Paras Jain : Software Developer">
     <meta name="keywords" content="HTML, CSS, Javascript, ReactJS, NodeJS, SEO, Coding, Portfolio, Resume, Website, Profile, Github, Linkedin, Design, Interactive, CV, Skills, Paras, Paras Jain, Bennett, Bennett University, Web, Web Developer, Frontend, Software, Software Developer, Fullstack, Fullstack Developer, Delhi, India, Portfolio">
     <meta name="robots" content= "index, follow">
-    <meta name="og:title" content="Portfolio">
+    <meta name="og:title" content="Paras Jain">
     <meta property = "og:url" content = "https://parasja1n.netlify.app/" />
     <meta property = "og:title" content = "Paras Jain"/>
-    <meta property = "og:description" content = "Portfolio Website"/>
+    <meta property = "og:description" content = "Software Developer"/>
     <meta name="og:type" content="Resume Website">
     <meta name="og:locale" content="en_IN">
     <meta property="og:image" content="/src/images/profile-pic.jpg">
