--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Software Developer">
+	  <meta name="google-site-verification" content="bJBOOnUDCprMX7UR9hdHgGIXntlp1Sx5GZTAZeF0SeE" />
     <meta name="author" content="Paras Jain : Software Developer">
     <meta name="keywords" content="HTML, CSS, Javascript, ReactJS, NodeJS, SEO, Coding, Portfolio, Resume, Website, Profile, Github, Linkedin, Design, Interactive, CV, Skills, Paras, Paras Jain, Bennett, Bennett University, Web, Web Developer, Frontend, Software, Software Developer, Fullstack, Fullstack Developer, Delhi, India, Portfolio">
     <meta name="robots" content= "index, follow">
